Resolved problem from jump to top

--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -38,7 +38,10 @@ html {
   font-size: 62.5%;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-family: 'Poppins', sans-serif;
 }
 
@@ -92,7 +95,7 @@ Header section start
 .navbar-lists {
   display: flex;
   gap: 4.8rem;
-  
+
 }
 
 .navbar-link:link,
@@ -174,7 +177,7 @@ Reuseable Code Section
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   z-index: -1;
-  
+
 
 }
 
@@ -182,6 +185,7 @@ Reuseable Code Section
 .btn:hover::before {
   transform: scaleX(1);
 }
+
 .btn:hover {
   color: #fff;
 }
